# pgk_operativa

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  HANDOFF.md  MEMORY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
archivo/: README.md
docs/: ADVISOR.md  ARCHITECTURE.md  BDS.md  ESTILO_PGK.md  PLAN_TRABAJO.md
docs/architecture/adrs/: ADR-001-stack-python-langgraph.md  ADR-002-ana-unica-sin-rebranding.md  ADR-003-archivo-no-legacy.md  ADR-004-rutas-absolutas-runtime.md  ADR-005-consenso-opt-in.md  ADR-006-tres-bds-inviolables.md
docs/pr_manifests/: PR-0001.yaml  PR-0002.yaml  PR-0003.yaml  PR-0004.yaml  PR-0006.yaml
informes/auditoria/: PR-0001.md  PR-0002.md  PR-0003.md  PR-0004.md  PR-0006.md
scripts/: README.md
src/pgk_operativa/: __init__.py
src/pgk_operativa/cli/: __init__.py  main.py
src/pgk_operativa/core/: __init__.py  config.py  graph.py  graph_state.py  llm.py  paths.py  router.py
src/pgk_operativa/core/consenso/: __init__.py  agreement.py  circuit_breaker.py  state.py  subgraph.py
src/pgk_operativa/nodos/: __init__.py  _base.py  calidad.py  contable.py  docs.py  ejecutor.py  fiscal.py  laboral.py  legal.py  marketing.py  prompts.py
src/pgk_operativa/verificador/: __init__.py  auditor.py  manifest.py  report.py  semantic.py
src/pgk_operativa/verificador/checks/: __init__.py  fidelity_check.py  imports_check.py  lines_check.py  shell_check.py  targets_check.py  tests_check.py  todo_check.py
tests/: test_cli.py  test_consenso.py  test_graph.py  test_nodos_helpers.py  test_router.py  test_smoke.py  test_verificador.py
